<resources>
    <string name="app_name" translatable="false">Registro de Ponto</string>
    <string name="txt_register">Button to Point Record</string>
    <string name="txt_play_image">Image of play to job start</string>
    <string name="txt_image_lunchtime">Image of pause to lunchtime</string>
    <string name="txt_image_return">Image of play to job return</string>
    <string name="txt_image_end">Image of end of work</string>
    <string name="txt_exemple_start">08:00:00</string>
    <string name="txt_exemple_lunch">12:00:00</string>
    <string name="txt_exemple_return">14:00:00</string>
    <string name="txt_exemple_end">18:00:00</string>
    <string name="txt_endOfTheWeek">End of the week</string>
    <string name="txt_Right_Arrow">Right Arrow to Week Changes</string>
    <string name="txt_left_arrow">Left Arrow to Week Changes</string>
    <string name="txt_separator_weeks">-</string>
</resources>