<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/txt_margin_default">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:background="@color/material_dynamic_neutral80">

        <ImageView
            android:id="@+id/ivPlay1"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_marginStart="@dimen/txt_margin_default"
            android:layout_marginTop="@dimen/txt_margin_default"
            android:contentDescription="@string/txt_play_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_play" />

        <ImageView
            android:id="@+id/ivPause"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_marginStart="@dimen/txt_margin_default"
            android:layout_marginBottom="@dimen/txt_margin_default"
            android:contentDescription="@string/txt_image_lunchtime"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@drawable/ic_pause" />

        <ImageView
            android:id="@+id/ivPlay2"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_marginStart="170dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/txt_image_return"
            app:layout_constraintStart_toEndOf="@+id/ivPlay1"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_play" />

        <ImageView
            android:id="@+id/ivStop"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_marginStart="170dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/txt_image_end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivPause"
            tools:srcCompat="@drawable/ic_stop" />

        <TextView
            android:id="@+id/tvEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/txt_exemple_start"
            app:layout_constraintBottom_toBottomOf="@+id/ivPlay1"
            app:layout_constraintStart_toEndOf="@+id/ivPlay1"
            app:layout_constraintTop_toTopOf="@+id/ivPlay1" />

        <TextView
            android:id="@+id/tvLunchtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/txt_exemple_lunch"
            app:layout_constraintBottom_toBottomOf="@+id/ivPause"
            app:layout_constraintStart_toEndOf="@+id/ivPause"
            app:layout_constraintTop_toTopOf="@+id/ivPause" />

        <TextView
            android:id="@+id/tvReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/txt_exemple_return"
            app:layout_constraintBottom_toBottomOf="@+id/ivPlay2"
            app:layout_constraintStart_toEndOf="@+id/ivPlay2"
            app:layout_constraintTop_toTopOf="@+id/ivPlay2" />

        <TextView
            android:id="@+id/tvLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/txt_exemple_end"
            app:layout_constraintBottom_toBottomOf="@+id/ivStop"
            app:layout_constraintStart_toEndOf="@+id/ivStop"
            app:layout_constraintTop_toTopOf="@+id/ivStop" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>